--- a/Languages/Japanese/Frontend/commands.json
+++ b/Languages/Japanese/Frontend/commands.json
@@ -3,8 +3,8 @@
     "command_missing_permisions_client": "おっと、あなたの権限が足りないのでこの操作を実行できません。",
     "command_missing_permissions_bot": "おっと、このボットの権限が足りないのでこの操作を実行できません。",
     "command_premium_required": "おっと、このコミュニティーにはプレミアム版がないのでこの操作を実行できません。",
-    "command_ratelimited_spam": "ちょっと落ち着いてください!短時間に送信しすぎです。しばらくしてから実行してください。",
-    "command_ratelimited_notice": "ちょっと落ち着いてください!短時間にこの操作を実行しすぎです。しばらくしてから実行してください：",
+    "command_ratelimited_spam": "ちょっと落ち着いてください！短時間に送信しすぎです。しばらくしてから実行してください。",
+    "command_ratelimited_notice": "ちょっと落ち着いてください！短時間にこの操作を実行しすぎです。しばらくしてから実行してください：",
     "command_time_just_now": "たった今",
     "command_time_second": "秒",
     "command_time_seconds": "秒",
@@ -21,49 +21,49 @@
     "command_time_year": "年",
     "command_time_years": "年",
     "command_time_ago": "前",
-    "command_permission_create_instant_invite": "招待を作成",
-    "command_permission_kick_members": "メンバーをキック",
-    "command_permission_ban_members": "メンバーをBAN",
-    "command_permission_add_reactions": "リアクションを追加",
-    "command_permission_priority_speaker": "優先スピーカー",
-    "command_permission_stream": "WEBカメラ",
-    "command_permission_view_channel": "チャンネルを見る",
-    "command_permission_send_messages": "メッセージを送信",
-    "command_permission_send_tts_messages": "テキスト読み上げメッセージを送信",
-    "command_permission_embed_links": "埋め込みリンク",
-    "command_permission_attach_files": "ファイルを添付",
-    "command_permission_read_message_history": "メッセージ履歴を読む",
-    "command_permission_use_external_emojis": "外部の絵文字を使用する",
-    "command_permission_view_guild_insights": "サーバーインサイトを見る",
-    "command_permission_connect": "接続",
-    "command_permission_speak": "発言",
-    "command_permission_use_vad": "音声検出を使用",
-    "command_permission_change_nickname": "ニックネームを変更",
-    "command_permission_use_application_commands": "アプリコマンドを使う",
-    "command_permission_request_to_speak": "スピーカー参加をリクエスト",
+    "command_permission_create_instant_invite": "CREATE_INSTANT_INVITE",
+    "command_permission_kick_members": "KICK_MEMBERS",
+    "command_permission_ban_members": "BAN_MEMBERS",
+    "command_permission_add_reactions": "ADD_REACTIONS",
+    "command_permission_priority_speaker": "PRIORITY_SPEAKER",
+    "command_permission_stream": "STREAM",
+    "command_permission_view_channel": "VIEW_CHANNEL",
+    "command_permission_send_messages": "SEND_MESSAGES",
+    "command_permission_send_tts_messages": "SEND_TTS_MESSAGES",
+    "command_permission_embed_links": "EMBED_LINKS",
+    "command_permission_attach_files": "ATTACH_FILES",
+    "command_permission_read_message_history": "READ_MESSAGE_HISTORY",
+    "command_permission_use_external_emojis": "USE_EXTERNAL_EMOJIS",
+    "command_permission_view_guild_insights": "VIEW_GUILD_INSIGHTS",
+    "command_permission_connect": "CONNECT",
+    "command_permission_speak": "SPEAK",
+    "command_permission_use_vad": "USE_VAD",
+    "command_permission_change_nickname": "CHANGE_NICKNAME",
+    "command_permission_use_application_commands": "USE_APPLICATION_COMMANDS",
+    "command_permission_request_to_speak": "REQUEST_TO_SPEAK",
     "command_permission_use_public_threads": "USE_PUBLIC_THREADS",
-    "command_permission_create_public_threads": "公開スレッドを作成",
+    "command_permission_create_public_threads": "CREATE_PUBLIC_THREADS",
     "command_permission_use_private_threads": "USE_PRIVATE_THREADS",
-    "command_permission_create_private_threads": "プライベートスレッドを作成",
-    "command_permission_use_external_stickers": "外部のスタンプを使用する",
-    "command_permission_send_messages_in_threads": "スレッドでメッセージを送信",
-    "command_permission_start_embedded_activities": "ユーザーアクティビティ",
-    "command_permission_administrator": "管理者",
-    "command_permission_manage_channels": "チャンネルを管理",
-    "command_permission_manage_guild": "サーバー管理",
-    "command_permission_view_audit_log": "監査ログを表示",
-    "command_permission_manage_messages": "メッセージの管理",
-    "command_permission_mention_everyone": "@everyone、@here、すべてのロールにメンション",
-    "command_permission_mute_members": "メンバーをミュート",
-    "command_permission_deafen_members": "メンバーのスピーカーをミュート",
-    "command_permission_move_members": "メンバーを移動",
-    "command_permission_manage_nicknames": "ニックネームの管理",
-    "command_permission_manage_roles": "ロールの管理",
-    "command_permission_manage_webhooks": "ウェブフックの管理",
-    "command_permission_manage_emojis_and_stickers": "絵文字・スタンプの管理",
-    "command_permission_manage_events": "イベントの管理",
-    "command_permission_manage_threads": "スレッドを管理",
-    "command_permission_moderate_members": "メンバーをタイムアウト",
+    "command_permission_create_private_threads": "CREATE_PRIVATE_THREADS",
+    "command_permission_use_external_stickers": "USE_EXTERNAL_STICKERS",
+    "command_permission_send_messages_in_threads": "SEND_MESSAGES_IN_THREADS",
+    "command_permission_start_embedded_activities": "START_EMBEDDED_ACTIVITIES",
+    "command_permission_administrator": "ADMINISTRATOR",
+    "command_permission_manage_channels": "MANAGE_CHANNELS",
+    "command_permission_manage_guild": "MANAGE_GUILD",
+    "command_permission_view_audit_log": "VIEW_AUDIT_LOG",
+    "command_permission_manage_messages": "MANAGE_MESSAGES",
+    "command_permission_mention_everyone": "MENTION_EVERYONE",
+    "command_permission_mute_members": "MUTE_MEMBERS",
+    "command_permission_deafen_members": "DEAFEN_MEMBERS",
+    "command_permission_move_members": "MOVE_MEMBERS",
+    "command_permission_manage_nicknames": "MANAGE_NICKNAMES",
+    "command_permission_manage_roles": "MANAGE_ROLES",
+    "command_permission_manage_webhooks": "MANAGE_WEBHOOKS",
+    "command_permission_manage_emojis_and_stickers": "MANAGE_EMOJIS_AND_STICKERS",
+    "command_permission_manage_events": "MANAGE_EVENTS",
+    "command_permission_manage_threads": "MANAGE_THREADS",
+    "command_permission_moderate_members": "MODERATE_MEMBERS",
     "command_error_notice": "おっと、何らかの問題が発生したようです。このエラーが続くようであればご連絡ください。",
     "verification_account_blacklisted": "おっと、あなたのアカウントはブラックリストに登録されています。",
     "verification_community_configuration": "おっと、まだ認証の設定が完了してないようです。",
@@ -116,19 +116,19 @@
     "whois_embed_roles_not_found": "役職が見つかりませんでした。",
     "verifychannel_channel_not_found": "おっと、設定するチャンネルも入力してください。",
     "verifychannel_channel_permission_requirements": "おっと、このチャンネルには必須の権限がないようです。",
-    "verifychannel_channel_set": "Great!認証チャンネルが変更されました。",
+    "verifychannel_channel_set": "Great！認証チャンネルが変更されました。",
     "verifychannel_embed_description": "コミュニティーへようこそ。ユーザーの安全のため、下のボタンを押して認証を始めてください。",
     "verifychannel_embed_poweredby": "Powered By",
     "verifychannel_embed_button": "アカウントを認証する",
     "verifylog_channel_not_found": "おっと、設定するチャンネルも入力してください。",
-    "verifylog_webhook_set": "Great! Sensoryは只今からセキュリティー通知をチャンネルに送信します。",
+    "verifylog_webhook_set": "Great！ Sensoryは只今からセキュリティー通知をチャンネルに送信します。",
     "verifymoderation_missing_configuration": "おっと、正しいフォーマットで設定してください。",
     "verifymoderation_already_enabled": "おっと、モデレーションシステムは既にオンになっています。",
     "verifymoderation_already_disabled": "おっと、モデレーションシステムは既にオフになっています。",
-    "verifymoderation_systems_enabled": "Great! 認証システムはオンになりました。",
-    "verifymoderation_systems_disabled": "Great! 認証システムはオフになりました。",
+    "verifymoderation_systems_enabled": "Great！ 認証システムはオンになりました。",
+    "verifymoderation_systems_disabled": "Great！ 認証システムはオフになりました。",
     "language_not_found": "おっと、その言語はまだこのサービスにはないようです。",
-    "language_configuration_set": "Great!言語が設定されました。",
+    "language_configuration_set": "Great！言語が設定されました。",
     "verifysettings_embed_channel": "チャンネル",
     "verifysettings_embed_status": "ステータス",
     "verifysettings_embed_bind": "バインド",
@@ -140,14 +140,14 @@
     "verifytfa_setting_not_found": "おっと、その設定はどこにも見つかりませんでした。",
     "verifytfa_service_already_enabled": "おっと、二要素認証は既にオンになっています",
     "verifytfa_service_already_disabled": "おっと、二要素認証は既にオフになっています",
-    "verifytfa_service_enabled": "Great!二要素認証がオンになりました。",
-    "verifytfa_service_disabled": "Great!二要素認証がオフになりました。",
+    "verifytfa_service_enabled": "Great！二要素認証がオンになりました。",
+    "verifytfa_service_disabled": "Great！二要素認証がオフになりました。",
     "verifyrole_not_found": "おっと、その役職は見つかりませんでした。",
     "verifyrole_disabled_role": "おっと、その役職はデフォルトの設定で管理できないようになっています。",
     "verifyrole_higher_than_client": "おっと、この役職はあなたの役職よりも高いようです。念のためですが、この役職は追加できません。",
     "verifyrole_higher_than_bot": "おっと、その役職はデフォルトの設定で管理できないようになっています。私より低い役職を選択してください。",
     "verifyrole_forbidden_permission": "おっと、その役職はデフォルトの設定で管理できないようになっています。禁止されている役職の権限:",
-    "verifyrole_role_set": "Great!Sensoryの認証の役職が設定されました。",
+    "verifyrole_role_set": "Great！Sensoryの認証の役職が設定されました。",
     "verifyregion_setting_not_found": "おっと、正しい設定を送信してください。",
     "verifyregion_method_not_found": "おっと、正しい方式で設定を送信してください。",
     "verifyregion_region_code": "おっと、地域コードが見つかりませんでした。",
@@ -155,21 +155,21 @@
     "verifyregion_already_whitelisted": "おっと、この地域は既にホワイトリストに登録されています。",
     "verifyregion_already_blacklisted": "おっと、この地域は既にブラックリストに登録されています。",
     "verifyregion_blacklist_are_currently_enabled": "おっと、既にブラックリストに登録されている地域があるみたいです。無効化し、ホワイトリストに登録することで機能を利用できます。",
-    "verifyregion_whitelist_limited_reached": "おっと、このカテゴリーには最高でも２つの地域しか追加できません。アップグレードしたいですか? こちらへどうぞ:",
-    "verifyregion_added": "Great!ファイヤーウォールの設定が更新され、対象の地域を追加しました：",
-    "verify_region_whitelist_not_found": "おっと、この地域はホワイトリストに登録されていません。",
-    "verify_region_blacklist_not_found": "おっと、この地域はブラックリストに登録されていません。",
-    "verifyregion_removed": "Great!ファイヤーウォールの設定が更新され、対象の地域を削除しました：",
-    "verifyregion_region_lock_deactivated": "おっと、地域ロックはまだ設定されていません。ファイヤーウォールを設定するには対象の地域を追加してください。",
-    "verifyregion_region_lock_active": "おっと、このコミュニティーは地域ロックが設定されているようです。ブラックリストに登録された地域を処理するにはまずホワイトリストから削除してください。",
-    "verifyregion_embed_allowed_regions": "許可された地域",
-    "verifyregion_embed_blocked_regions": "ブロックされた地域",
-    "verifyregion_not_enough_blacklists": "おっと、ブロックされた地域はないようです。",
-    "help_embed_bot_documentation": "ドキュメンテーション",
-    "help_embed_documentation": "必要な時のみサポートへお越しください。ボットの設定については、ドキュメンテーションをご参照ください:",
+    "verifyregion_whitelist_limited_reached": "このカテゴリには最大2つの地域しか追加できません。アップグレードをご希望の方は、ストアページをご覧ください。",
+    "verifyregion_added": "Great, firewall settings have been updated and have added region:",
+    "verify_region_whitelist_not_found": "Whoops looks like this region isn't currently whitelisted",
+    "verify_region_blacklist_not_found": "Whoops looks like this region isn't currently blacklisted",
+    "verifyregion_removed": "Great, firewall settings have been updated and have removed region:",
+    "verifyregion_region_lock_deactivated": "Whoops looks like the region lock is currently not setup. Add a region to enable the firewall.",
+    "verifyregion_region_lock_active": "Whoops looks like this community currently has region lock enable. In order to process blacklisted regions you must remove the current whitelisted regions for this to function",
+    "verifyregion_embed_allowed_regions": "Allowed Regions",
+    "verifyregion_embed_blocked_regions": "Blocked Regions",
+    "verifyregion_not_enough_blacklists": "Whoops looks like there isn't any blocked regions available.",
+    "help_embed_bot_documentation": "Documentation",
+    "help_embed_documentation": "Please ensure that you will only require support if needed if you are simply looking for help with setting up the bot you can visit our documentation:",
     "help_embed_website": "Website",
-    "help_embed_website_description": "Sensoryのウェブサイトは {{website}}です。他のボットはフィッシングサイトである可能性が高いです。もしそうであった場合、こちらへどうぞ: {{discord}}",
-    "help_embed_general_suport": "総合サポート",
-    "help_embed_general_support_description": "助けが必要なときのみサポートをご利用ください。質問に対する答えはこちら: {{about}}。 サポートサーバーはこちら: {{discord}}",
-    "help_embed_button": "サポートセンター"
+    "help_embed_website_description": "Sensory's main website is {{website}} any other bot is likely a phishing site which you can report to us here: {{discord}}",
+    "help_embed_general_suport": "General Support",
+    "help_embed_general_support_description": "Support should only be used if your in need of actual help. You can find answers to your questions here: {{about}}. Support Server can be found here: {{discord}}",
+    "help_embed_button": "Support Center"
 }
